--- a/css/auto.css
+++ b/css/auto.css
@@ -1,6 +1,7 @@
 /* GERAL CONFIGURAÇÃO */
 * {
     box-sizing: border-box;
+    list-style: none;
 }
 /*CORPO DO SITE*/
 body {
@@ -8,12 +9,13 @@ body {
     font-family: Helvetica;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
     color: #000;
+    
 }
 /*CABEÇALHO DO SITE*/
 header {
     background: #fff;
-    border-bottom: solid 20px rgb(12, 12, 187);
-    border-top: solid 20px rgb(187, 12, 12);
+    border-bottom: solid 30px rgb(12, 12, 187);
+    border-top: solid 30px rgb(187, 12, 12);
 }
 
 .navbar {
@@ -32,8 +34,97 @@ header {
 }
 
 .logo img {
-    width: 200px;
+    width: 420px;
 }
+
+/*MENU HAMBURGUER*/
+.menu-burguer {
+    margin-left: 70px;
+    margin-top: 20px;
+}
+
+.menu-burguer .menu-faketrigger {
+    position: absolute;
+    z-index: 1000;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+.menu-burguer .menu-lines {
+    position: absolute;
+    z-index: 999;
+    width: 35px;
+    height: 35px;
+}
+
+.menu-burguer .menu-lines span {
+    display: block;
+    width: 35px;
+    height: 5px;
+    margin-bottom: 10px;
+    background-color: #000;
+    border-radius: 3px;
+    transition: all ease .2s;
+}
+
+.menu-burguer .menu-faketrigger:checked ~ .menu-lines span {
+    background-color: #fff;
+}
+
+.menu-burguer .menu-faketrigger:checked ~ .menu-lines span:nth-child(1){
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.25);
+}
+
+.menu-burguer .menu-faketrigger:checked ~ .menu-lines span:nth-child(2){
+    opacity: 0;
+}
+
+.menu-burguer .menu-faketrigger:checked ~ .menu-lines span:nth-child(3){
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg)  scaleX(1.25);
+}
+
+.menu-burguer ul {
+    position: absolute;
+    z-index: 998;
+    left: 0;
+    top: 0;
+    width: 300px;
+    height: calc(30vh - 50px);
+    padding-top: 80px;
+    background-color: rgba(0, 0, 0, 0.42);
+    margin-left: -300px;
+    transition: all ease .2s;
+    border-radius: 5px;
+   
+}
+
+.menu-burguer .menu-faketrigger:checked ~ ul {
+    margin-left: 0;
+}
+
+.menu-burguer ul li {
+    padding: 10px 30px;
+    
+}
+
+.menu-burguer ul li a {
+    text-decoration: none;
+    color: #fff;
+    
+    font-size: 22px;
+    transition: all ease .3s;
+}
+
+.menu-burguer ul li a:hover {
+    color: #f1f1f1;
+    font-weight: bold;
+}
+/*TÉRMINO MENU HAMBURGUER*/
 
 .menu {
     flex: 70%;
@@ -83,7 +174,7 @@ section {
 
 section h2 {
     width: 100%;
-    font-size: 45px;
+    font-size: 3em;
     margin: 0;
     font-weight: bold;
     color: #fff;
@@ -277,7 +368,7 @@ section h2 {
 .contato {
     /* letter-spacing: 2.5px; */
     /* width: 100%; */
-    font-size: 15px;
+    font-size: 1.5em;
     margin: 0;
     font-weight: bold;
     color: #fff;
@@ -323,3 +414,7 @@ footer {
 .logo-rodape {
     padding: 100px;
 }
+
+
+
+
