--- a/css/produtos.css
+++ b/css/produtos.css
@@ -20,12 +20,14 @@ main {
     display: flex;
     flex-flow: row wrap;
     height: 200px;
-    border-top: 25px solid blue;
-    border-bottom: 25px solid red;
+    border-top: 30px solid blue;
+    border-bottom: 30px solid red;
     justify-content: center;
     align-items: center;
 
 }
+
+
 
 .logo {
     flex: 100%;
@@ -35,7 +37,7 @@ main {
 }
 
 .logo img {
-    width: 200px;
+    width: 500px;
 }
 
 h1 {
@@ -43,13 +45,13 @@ h1 {
     font-weight: 900;
     margin-top: 150px;
     letter-spacing: 10px;
-    font-size: 45px;
+    font-size: 3em;
 }
 
 h2 {
     text-align: center;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 1.5em;
     letter-spacing: 8px;
 }
 
