--- a/css/servico.css
+++ b/css/servico.css
@@ -7,8 +7,8 @@
 }
 
 .navbar img {
-    width: 200px;
-    align-items: left;
+    width: 500px;
+    /* align-items: left; */
 }
 
 .nav a {
@@ -20,7 +20,18 @@
     padding: 150px;
 }
 
-
+.navbar .logo-server {
+    
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
