--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -24,6 +24,7 @@
         flex-direction: column;
         align-items: flex-start;
         margin-top: 50px;
+        text-align: ;
     }
 
     .cont-mpas h2 {
@@ -96,22 +97,6 @@
 
 }
 
-@media screen and (max-width: 800px) {
-    
-    section h2 {
-        font-size: 1.5em;
-    }
-
-}
-
-@media screen and (max-width: 500px) {
-    
-    h1 {
-       font-size: 1.5em;
-    }
-
-}
-
 @media screen and (max-width: 500px) {
     
     .menu-burguer {
@@ -120,27 +105,36 @@
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 1200px) {
     
+      .container .search  {
+        display: grid;
+        margin-left: 300px;      
+        font-size: 1.5em;
+    }
 
+}
+
+@media screen and (max-width: 1200px) {
     
+    .search imput  {
+      display: none;
+  }
+
+}
+
+@media screen and (max-width: 1200px) {
     
+    .product-list .product {
+        display: inline-flex;
+        flex-flow: nowrap;
+        justify-content: space-between;
+        align-items: center;
+       
+      
+  }
+
+}
+
+   
+  
