--- a/css/product.css
+++ b/css/product.css
@@ -144,7 +144,16 @@ footer {
 
 
 
-@media screen and (max-width: 2000px) {
+  @media screen and (max-width: 2300px){
+     .product  img{
+        width: 200px;
+    }
+    
+    
+}
+
+
+@media screen and (max-width: 1500px) {
     
     .product {
        width: 100%; 
@@ -157,6 +166,8 @@ footer {
     .container .search input {
         padding: 10px 15px;
     }
+
+    
 }
 
 @media screen and (max-width: 800px){
