--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -49,7 +49,7 @@
 
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 900px) {
     
     .menu-burguer {
         display: block;
@@ -72,9 +72,11 @@
 @media screen and (max-width: 1500px) {
     
     .logo img  {
-        width: 250px;
+        width: 200px;
     }
-
+    .menu {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1250px) {
