--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -49,7 +49,7 @@
 
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
     
     .menu-burguer {
         display: block;
@@ -69,10 +69,10 @@
 
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1000px) {
     
     .logo img  {
-        width: 200px;
+       display: none;
     }
     .menu {
         display: none;
@@ -86,6 +86,18 @@
     }
 
 }
+
+@media screen and (max-width: 1450px) {
+    
+    .logo img  {
+        display: inline-block;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+}
+
 
 @media screen and (max-width: 1000px) {
     
