--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -62,10 +62,21 @@
 }
 
 /*MENU E LOGO*/
-@media screen and (max-width: 2300px) {
+/* @media screen and (max-width: 1000px) {
+
+    .menu {
+        display: none;
+    }
 
     .logo img {
-        width: 290px;
+        width: 300px;
+    }
+} */
+
+@media screen and (max-width: 1500px) {
+
+    .logo img {
+        width: 100px;
     }
 }
 
@@ -76,34 +87,21 @@
     }
 }
 
-@media screen and (max-width: 1000px) {
-
-    .menu {
-        display: none;
-    }
+@media screen and (max-width: 2300px) {
 
     .logo img {
-        width: 300px;
+        width: 290px;
     }
 }
+/*TÉRMINO MENU E LOGO*/
 
-@media screen and (max-width: 1500px) {
-
-    .logo img {
-        width: 200px;
-    }
-
-}
 
 @media screen and (max-width: 900px) {
 
     .logo-serve img {
         width: 300px;
     }
-
 }
-
-/*TÉRMINO MENU E LOGO*/
 
 @media screen and (max-width: 500px) {
 
