--- a/css/auto.css
+++ b/css/auto.css
@@ -23,29 +23,31 @@ header {
 .navbar {
     display: flex;
     flex-flow: row wrap;
-    height: 150px;
+    height: 200px;
     justify-content: center;
     align-items: center;
 }
 
 .logo {
-    flex: 20%;
-    margin-left: 10%;
+    flex: 100%;
+    /* margin-left: 10%; */
     text-align: center;
+    /* border: 3px solid black; */
+    margin-top: 15px;
 
 }
 
 .menu {
-    flex: 70%;
+    flex: 100%;
     text-align: right;
-    padding: 20px;
-    
+    padding: 30px;
+    /* border: 3px solid black; */
 }
 
 .menu a {
     color: #000;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.5em;
     padding: 20px 16px;
 }
 
@@ -72,7 +74,7 @@ header {
 }
 
 .logo img {
-    width: 300px;
+    width: 450px;
 }
 
 /*MENU HAMBURGUER*/
