--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -61,7 +61,12 @@
 
 }
 
+@media screen and (max-width: 550px) {
 
+    .logo img {
+        width: 400px;
+    }
+}
 
 
 @media screen and (max-width: 900px) {
