--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -66,7 +66,15 @@
     .logo img {
         width: 350px;
     }
-}
+
+    section h2{
+       margin-top: -35px;
+        margin-bottom: 10px;
+        font-size: 1.5em;
+    }
+
+   
+
 
 
 @media screen and (max-width: 900px) {
