--- a/css/dam-slide.css
+++ b/css/dam-slide.css
@@ -1,331 +1,60 @@
-body {
-    margin: 0;
-    text-align: center;
-    background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(6, 19, 131, 0.993), rgb(139, 29, 29));
-    height: auto;
-    font-family: Helvetica;
-
-
-}
-
-header {
-    border-top: solid 30px rgb(12, 12, 187);
-    border-bottom: solid 30px rgb(187, 12, 12);
-    margin-bottom: 100px;
-}
-
-.navbar {
-    display: flex;
-    flex-flow: row wrap;
-    height: 200px;
-    background: #fff;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo {
-    flex: 100%;
-    text-align: center;
-}
-
-.logo img {
-    width: 450px;
-}
-
-
-.div-slider{
-    width: auto;
-    height: 400px;
-    text-align: center;
-    }
-    .slides-front {
-        padding: 0;
-        width: 700px;
-        height: 370px;
-        display: block;
-        margin: auto;
-        position: relative;
-    }
-    
-    .slides-front * {
-        user-select: none;
-        -ms-user-select: none;
-        -moz-user-select: none;
-        -khtml-user-select: none;
-        -webkit-user-select: none;
-        -webkit-touch-callout: none;
-    }
-    
-    .slides-front input { display: none; }
-    
-    .slide-container { display: block; }
-    
-    .slide {
-        top: 0;
-        opacity: 0;
-        width: 700px;
-        height: 500px;
-        display: block;
-        position: absolute;
-    
-        transform: scale(0);
-    
-        transition: all .7s ease-in-out 0.1s;
-    }
-    
-    .slide img {
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-        
-    }
-    
-    .nav label {
-        width: 60px;
-        height: 135%;
-        display: none;
-        position: absolute;
-        opacity: 0;
-        z-index: 9;
-        cursor: pointer;
-        transition: opacity .2s;
-        color: #FFF;
-        font-size: 156pt;
-        text-align: center;
-        line-height: 380px;
-        font-family: "Varela Round", sans-serif;
-        background-color: rgba(255, 255, 255, .3);
-        text-shadow: 0px 0px 15px rgb(119, 119, 119);
-        
-    }
-    
-    .slide:hover + .nav label { opacity: 0.5; }
-    
-    .nav label:hover { opacity: 1; }
-    
-    .nav .next { right: 0; }
-    
-    input:checked + .slide-container  .slide {
-        opacity: 1;
-    
-        transform: scale(1);
-    
-        transition: opacity 1s ease-in-out 0.1s;
-    }
-    
-    input:checked + .slide-container .nav label { display: block; }
-    
-    .nav-dots {
-        width: 100%;
-        bottom: 9px;
-        height: 11px;
-        display: block;
-        position: relative;
-        text-align: center;
-    }
-    
-    .nav-dots .nav-dot {
-        top: 375px;
-        width: 11px;
-        height: 11px;
-        margin: 0 4px;
-        position: relative;
-        border-radius: 100%;
-        display: inline-block;
-        background-color: rgba(0, 0, 0, 0.6);
-    }
-    
-    .nav-dots .nav-dot:hover {
-        cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    input#img-1:checked ~ .nav-dots label#img-dot-1,
-    input#img-2:checked ~ .nav-dots label#img-dot-2,
-    input#img-3:checked ~ .nav-dots label#img-dot-3,
-    input#img-4:checked ~ .nav-dots label#img-dot-4,
-    input#img-5:checked ~ .nav-dots label#img-dot-5,
-    input#img-6:checked ~ .nav-dots label#img-dot-6 {
-        background: rgba(0, 0, 0, 0.8);
-    }
-
-     /*RODAPÉ*/
-       .main_footer {
-        background: linear-gradient(to right, #0d0086, red);
-        color: #fff;
-        font-size: 0.875em;
-        margin-top: 80px;
-    }
-
-    .main_footer .content {
-        float: left;
-        width: 90%;
-        margin: 0 5%;
-        padding: 5em 0;
-    }
-
-    .container {
-        float: left;
-        width: 100%;
-        margin-top: 300px;
-    }
-
-    .colfooter {
-        width: 100%;
-        height: auto;
-        float: left;
-        margin-bottom: 2em;
-    }
-
-    .colfooter ul {
-        width: 100%;
-        float: left;
-    }
-
-    .colfooter ul li {
-        padding: 0.2em 0em;
-    }
-
-    .colfooter ul li a {
-        text-decoration: none;
-        color: #ffffff;
-        font-size: 1em;
-    }
-
-    .colfooter ul li a i {
-        font-size: 0.5em;
-    }
-
-    .colfooter ul li a:hover {
-        text-decoration: underline;
-    }
-
-    .colfooter .titleFooter {
-        font-family: Helvetica, sans-serif;
-        font-size: 1.5em;
-        color: #ffffff;
-        padding-bottom: 0.5em;
-        margin-bottom: 0.5em;
-        border-bottom: 1px #ffffff solid;
-    }
-
-    .colfooter ul li a {
-        display: block;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.2em;
-        height: 30px;
-        margin-right: 12%;
-
-    }
-
-    .colfooter ul li {
-        list-style: none;
-    }
-
-    .colfooter p {
-        font-family: 'Helvetica';
-        color: #ffffff;
-        font-size: 1.2em;
-        height: 25px;
-    }
-
-    .colfooter i {
-     font-size: 20px;
-  }
-
-  .socials {
-    margin: 0;
+* {
     padding: 0;
-    font-size: 40px;
-    list-style: none;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: -20px;
-
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.socials li {
-    margin: 0 10px;
+body {
+ background: #cccccc;
 }
 
-.socials li a {
-  font-size: 1em;
+.container {
+    width: 102vmin;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 20px solid #ffffff;
+    border-radius: 8px;
+    box-shadow: 10px 25px 30px rgba(30,30,200,0.3);
 }
 
-
-
-.socials li a i:hover {
- color: #010155;
- transform: scale(1.3);
-}
-
-.socials a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.socials a i {
-    font-size: 1.5em;
-    color: #fff;
-    margin-right: 0;
-    transition: 0.5s;
-}
-
-
-.titleFooter {
-    text-align: center;
-}
-
-.main_footer_copy {
-    background: linear-gradient(to right, #0d0086, red);
+.wrapper {
     width: 100%;
-    float: left;
-    text-align: center;
-    padding: 1.5em 0em;
+    display: flex;
+    animation: slide 15s infinite;
 }
-
-.main_footer_copy p {
-    font-family: 'Helvetica';
-    font-size: 1em;
-    color: #e1e0e0;
-    height: 10px;
-}
-
-.main_footer_copy .m-b-footer {
-    margin-bottom: 0.5em;
-}
-
-.main_footer_copy .by {
-    font-size: 0.96em;
-}
-
-.main_footer_copy .by a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.main_footer_copy .by a:hover {
-    text-decoration: underline;
-}
-
-.main_footer_copy .by i {
-    font-size: 0.96em;
-    margin-right: 3px;
-    color: #e82626;
-}
-
-/*Responsivo*/
-/*768PX BREAKPOINT*/
-@media (min-width:48em) {
-    .colfooter {
-        width: 30%;
-        margin-right: 5%;
-        margin-bottom: 0;
+@keyframes slide {
+   
+    0%{
+        transform: translateX(0);
     }
-
-    .colfooter:nth-of-type(3n+0) {
-        margin-right: 0;
-        border-right: 0;
+    25%{
+        transform: translateX(0);
     }
+    30%{
+        transform: translateX(-100%);
+    }
+    50%{
+        transform: translateX(-100%);
+    }
+    /* 55%{
+        transform: translateX(-200%);
+    }
+    75%{
+        transform: translateX(-200%);
+    }
+    80%{
+        transform: translateX(-300%);
+    }
+    95%{
+        transform: translateX(-300%);
+    } */
+ 
+}   
+
+img {
+    width: 100%;
+   
 }
