--- a/css/dam-slide.css
+++ b/css/dam-slide.css
@@ -4,6 +4,35 @@
     box-sizing: border-box;
 }
 
+.navbar img {
+    width: 500px;
+    /* align-items: left; */
+}
+
+.navbar a {
+    text-decoration: none;
+}
+
+.titulo-serve {
+    text-align: center;
+    padding: 150px;
+}
+
+.navbar {
+    /* display: inline-flex; */
+    /* position: absolute; */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 100%;
+}
+
+
 body {
  background: #cccccc;
 }
@@ -12,7 +41,7 @@ body {
     width: 102vmin;
     position: absolute;
     transform: translate(-50%,-50%);
-    top: 50%;
+    top: 100%;
     left: 50%;
     overflow: hidden;
     border: 20px solid #ffffff;
