--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,32 +1,84 @@
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 660px) {
     .menu {
         display: none;
         flex-direction: column;
         align-items: flex-start;
     }
 
+} */
+/*MENU HAMBURGUE*/
+@media screen and (max-width: 670px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: var(--color2);
+        transition: all 0.2s ease-in-out;
+        background-color: black;
+    }
+
+    .menu li {
+        margin-top: 40px;
+    }
+
+    .menu li {
+        padding: 40px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
+}
+
+
+@media screen and (max-width: 1086px) {
+    .menu li {
+        font-size: 10px;
+    }
+
 }
 
 @media screen and (max-width: 800px) {
-    .card {
+
+    section .card {
         width: 100%;
     }
 
     section h2 {
-        font-size: 35px;
+        font-size: 25px;
     }
+
+    .contato h1 {
+        margin-bottom: 10px;
+        font-size: 25px;
+        letter-spacing: 5px;
+    }
+
+    .contato p {
+        font-size: 15px;
+        letter-spacing: 2px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        line-height: 50px;
+    }
+
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1027px) {
 
-    section h2 {
-        font-size: 30px;
-    }
-}
+    section .contato .cont-mpas .mapas {
 
-@media screen and (max-width: 1100px) {
-
-    .cont-mpas {
         display: inline-block;
         flex-direction: column;
         align-items: flex-start;
@@ -35,20 +87,42 @@
     }
 
     .cont-mpas h2 {
-        margin-top: 50px;
+        margin-top: 25px;
     }
 }
 
-@media screen and (max-width: 605px) {
+@media screen and (max-width: 700px) {
 
-    .contatos h2 {
-        font-size: 23px;
-        letter-spacing: 0;
+    section .contatos h2 {
+        margin-top: 10px;
+        font-size: 15px;
     }
+
+    section .contatos h3 {
+        font-size: 15px;
+    }
+
+    section .contatos p {
+        font-family: 10px;
+    }
+
+    .text {
+        font-size: 5px;
+    }
+
+    section .contatos {
+        line-height: 35px;
+    }
+
+    /* .text-box  a {
+        height: 10px;
+        margin-bottom: 50px;
+    } */
+
 
 }
 
-@media screen and (max-width: 3000px) {
+/* @media screen and (max-width: 3000px) {
 
     .menu-burguer {
         display: none;
@@ -66,7 +140,7 @@
         display: none;
     }
 
-}
+} */
 
 @media screen and (max-width: 550px) {
 
@@ -74,11 +148,11 @@
         width: 350px;
     }
 
-    section h2 {
+    /* section h2 {
         margin-top: -35px;
         margin-bottom: 10px;
         font-size: 1.5em;
-    }
+    } */
 
 }
 
@@ -93,9 +167,9 @@
 
 @media screen and (max-width: 500px) {
 
-    .menu-burguer {
+    /* .menu-burguer {
         margin-left: 10px;
-    }
+    } */
 
     #whats {
         display: none;
@@ -142,9 +216,57 @@
 @media screen and (max-width: 1110px) {
 
     .text-box {
-      
+
         font-size: 10px;
 
     }
 
+}
+
+
+@media screen and (max-width: 1110px) {
+    .logo a img {
+        width: 200px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+
+    .product {
+        width: 100%;
+
+    }
+
+    section h1 {
+        font-size: 35px;
+    }
+
+    .container .search input {
+        padding: 10px 15px;
+    }
+
+
+}
+
+@media screen and (max-width: 800px) {
+    .logo img {
+        width: 350px;
+    }
+
+
+}
+
+/*Responsivo FOOTER*/
+/*768PX BREAKPOINT*/
+@media (min-width:48em) {
+    .colfooter {
+        width: 30%;
+        margin-right: 5%;
+        margin-bottom: 0;
+    }
+
+    .colfooter:nth-of-type(3n+0) {
+        margin-right: 0;
+        border-right: 0;
+    }
 }
