--- a/css/auto.css
+++ b/css/auto.css
@@ -9,159 +9,148 @@ body {
     margin: 0;
     font-family: Helvetica;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
-    color: #000;
+    --color1: var(--color1)#fff;
+    --color1: var(--color1)#181818;
 
 }
 
 /*CABEÇALHO DO SITE*/
-header {
-    background: #fff;
-    border-bottom: solid 30px rgb(12, 12, 187);
-    border-top: solid 30px rgb(187, 12, 12);
-}
-
-.navbar {
+.nav-bar {
+    width: 100%;
     display: flex;
-    flex-flow: row wrap;
-    height: 200px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    list-style: none;
+    position: relative;
+    background-color: var(--color2);
+    padding: 12px 20px;
+    border-bottom: 20px solid blue;
+    border-top: 20px solid red;
 }
 
-.logo {
-    flex: 100%;
-    /* margin-left: 10%; */
-    text-align: center;
-    /* border: 3px solid black; */
-    margin-top: 15px;
-
-}
-
-.menu {
-    flex: 100%;
-    text-align: right;
-    padding: 30px;
-    /* border: 3px solid black; */
-}
-
-.menu a {
-    color: #000;
-    text-decoration: none;
-    font-size: 1.5em;
-    padding: 10px 16px;
-   
-}
-
-.menu a:hover {
-    color: red;
-    text-decoration: none;
-    border-bottom: 4px solid #180f4a;
+.nav-bar a {
+    font-size: 1.2em;
     font-weight: bold;
-
+    letter-spacing: 1.5px;
 }
 
-#botao {
-    background: #180f4a;
-    padding: 10px 25px;
-    color: white;
-    border-radius: 5px;
-    margin-right: 10%;
-    margin-left: 5%;
-}
-
-#botao:hover {
-    border: none;
-    background: red;
+.nav-bar a:hover {
+    transform: scale(0.9);
+    color: var(--color2);
+    border-bottom: 2px solid blue;
 }
 
 .logo img {
-    width: 450px;
+    width: 500px;
 }
 
-/*MENU HAMBURGUER*/
-.menu-burguer {
-    margin-left: 70px;
-    margin-top: 20px;
-}
+/* .navbar li {
+    background-color: #181818;
+   
+      
+} */
 
-.menu-burguer .menu-faketrigger {
-    position: absolute;
-    z-index: 1000;
-    width: 35px;
-    height: 35px;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.menu-burguer .menu-lines {
-    position: absolute;
-    z-index: 999;
-    width: 35px;
-    height: 35px;
-}
-
-.menu-burguer .menu-lines span {
-    display: block;
-    width: 35px;
-    height: 5px;
-    margin-bottom: 10px;
-    background-color: #000;
-    border-radius: 3px;
-    transition: all ease .2s;
-}
-
-.menu-burguer .menu-faketrigger:checked~.menu-lines span {
-    background-color: #000;
-}
-
-.menu-burguer .menu-faketrigger:checked~.menu-lines span:nth-child(1) {
-    transform-origin: 0% 0%;
-    transform: rotate(45deg) scaleX(1.25);
-}
-
-.menu-burguer .menu-faketrigger:checked~.menu-lines span:nth-child(2) {
-    opacity: 0;
-}
-
-.menu-burguer .menu-faketrigger:checked~.menu-lines span:nth-child(3) {
-    transform-origin: 0% 100%;
-    transform: rotate(-45deg) scaleX(1.25);
-}
-
-.menu-burguer ul {
-    position: absolute;
-    z-index: 998;
-    left: 0;
-    top: 0;
-    width: 300px;
-    height: calc(50vh - 50px);
-    padding-top: 80px;
-    background-color: rgba(0, 0, 0, 0.42);
-    margin-left: -300px;
-    transition: all ease .2s;
-    border-radius: 5px;
-}
-
-.menu-burguer .menu-faketrigger:checked~ul {
-    margin-left: 0;
-}
-
-.menu-burguer ul li {
-    padding: 10px 30px;
+.menu {
+    display: flex;
 
 }
 
-.menu-burguer ul li a {
+.menu li {
+    padding-left: 30px;
+}
+
+.menu li a {
+
+    display: inline-block;
     text-decoration: none;
-    color: #FFF;
-    font-weight: bold;
-    font-size: 22px;
-    transition: all ease .3s;
+    color: #fff;
+    text-align: center;
+    transition: 0.15s ease-in-out;
+    position: relative;
+    text-transform: uppercase;
 }
 
-.menu-burguer ul li a:hover {
-    color: #f1f1f1;
-    font-weight: bold;
+.menu li a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: var(--color1);
+    transition: 0.15s ease-in-out;
+
+}
+
+.menu li a:hover:after {
+    width: 100%;
+}
+
+.open-menu,
+.close-menu {
+    position: absolute;
+    color: var(--color1);
+    cursor: pointer;
+    font-size: 1.5rem;
+    display: none;
+
+}
+
+.open-menu {
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+
+}
+
+.close-menu {
+    top: 20px;
+    right: 20px;
+
+}
+
+#check {
+    display: none;
+
+}
+
+@media (max-width: 610px) {
+    .menu {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        z-index: 100;
+        background-color: var(--color2);
+        transition: all 0.2s ease-in-out;
+    }
+
+    .menu li {
+        margin-top: 40px;
+    }
+
+    .menu li {
+        padding: 40px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
+}
+
+@media screen and (max-width: 1110px) {
+    .logo a img {
+        width: 200px;
+    }
 }
 
 /*TÉRMINO MENU HAMBURGUER*/
@@ -181,12 +170,15 @@ section {
 
 section h2 {
     width: 100%;
-    font-size: 3em;
+    font-size: 40px;
     margin: 0;
     font-weight: bold;
     color: #fff;
     margin-bottom: 150px;
     letter-spacing: 4px;
+}
+.titulo {
+    font-size: 50px;
 }
 
 .card h3 {
@@ -335,9 +327,9 @@ section h2 {
 }
 
 .contatos h2 {
-    font-weight: 900;
-    font-size: 40px;
-    letter-spacing: 15px;
+    font-weight: bold;
+    font-size: 50px;
+    letter-spacing: 8px;
     padding: 0;
     margin: 0;
 }
@@ -356,6 +348,7 @@ section h2 {
 .text {
     color: white;
     text-align: center;
+    
 }
 
 .mapas {
@@ -407,4 +400,3 @@ section h2 {
 .fone {
     width: 75px;
 }
-
