--- a/css/btn.css
+++ b/css/btn.css
@@ -5,27 +5,48 @@
 }
 
 body {
+    background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
     font-family: Helvetica, sans-serif;
     --color1: var(--color1)#fff;
     --color1: var(--color1)#181818;
 }
 
-.nav-bar {
-    width: 100%;
+.navbar {
+    flex: 100%;
     display: flex;
+    height: 10rem;
+   background: #fff;
+}
+
+.nav-bar {
+    display: flex;
+    flex: 100%;
     justify-content: space-between;
     align-items: center;
     list-style: none;
     position: relative;
-    background-color: var(--color2);
+    /* background-color: var(--color2); */
     padding: 12px 20px;
-    border-bottom: 20px solid blue;
-    border-top: 20px solid red;
+    /* border-bottom: 30px solid red;
+    border-top: 30px solid blue; */
+    background-color: #fff;
 }
+
+/* .logo {
+    flex: 20%;
+    border: 2px solid white;
+    text-align: center;
+} */
 
 .logo img {
     width: 500px;
 }
+
+/* .menu {
+    flex: 80%;
+    border: 2px solid white;
+    text-align: right;
+} */
 
 .menu {
     display: flex;
@@ -33,6 +54,7 @@ body {
 
 .menu li {
     padding-left: 30px;
+    text-align: right;
 }
 
 .menu li a {
@@ -43,6 +65,7 @@ body {
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
+    text-align: right;
 }
 
 .menu li a::after {
@@ -120,5 +143,336 @@ body {
 @media screen and (max-width: 1110px) {
     .logo a img {
         width: 200px;
+    }
+}
+
+/*CARDS DO SITE*/
+section {
+    display: inline-block;
+    margin-top: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 5%;
+    text-align: center;
+    width: 90%;
+}
+
+section h2 {
+    width: 100%;
+    font-size: 3em;
+    margin: 0;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 150px;
+    letter-spacing: 4px;
+}
+
+.card h3 {
+    font-size: 25px;
+    letter-spacing: 5px;
+    color: #000;
+}
+
+.card {
+    background-image: linear-gradient(to bottom, rgb(255, 255, 255), rgb(255, 255, 255), rgba(253, 253, 253, 0.726));
+    display: inline-block;
+    width: 30%;
+    padding: 20px;
+    margin: 1%;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 50px;
+}
+
+.card img {
+    width: 150px;
+
+}
+
+.garantia {
+
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+    background: transparent;
+    display: inline-block;
+    width: 60%;
+    border-radius: 10px;
+    cursor: pointer;
+    word-spacing: 5px;
+    font-style: oblique;
+    font-weight: bold;
+}
+
+.valor {
+    font-weight: 900;
+    font-weight: bold;
+    font-style: oblique;
+    text-transform: uppercase;
+    font-size: 30px;
+    color: red;
+}
+
+
+/*BOTÃO CHAMADA CONTATO*/
+.text-box {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    float: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: #fff;
+    /* margin-left: 44vw;
+   margin-top: 42vh; */
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    /* display: inline-block; */
+    border-radius: 100px;
+    transition: all .2s;
+    position: absolute;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+    background-color: blue;
+    color: #fff;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: white;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 5s ease-out;
+    animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/*RODAPÉ*/
+.main_footer {
+    background: linear-gradient(to right, #0d0086, red);
+    color: #fff;
+    font-size: 0.875em;
+    margin-top: 80px;
+}
+
+.main_footer .content {
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+    padding: 5em 0;
+}
+
+.container {
+    float: left;
+    width: 100%;
+}
+
+.colfooter {
+    width: 100%;
+    height: auto;
+    float: left;
+    margin-bottom: 2em;
+}
+
+.colfooter ul {
+    width: 100%;
+    float: left;
+}
+
+.colfooter ul li {
+    padding: 0.2em 0em;
+}
+
+.colfooter ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1em;
+}
+
+.colfooter ul li a i {
+    font-size: 0.5em;
+}
+
+.colfooter ul li a:hover {
+    text-decoration: underline;
+}
+
+.colfooter .titleFooter {
+    font-family: Helvetica, sans-serif;
+    font-size: 1.5em;
+    color: #ffffff;
+    padding-bottom: 0.5em;
+    margin-bottom: 0.5em;
+    border-bottom: 1px #ffffff solid;
+}
+
+.colfooter ul li a {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    height: 30px;
+    margin-right: 12%;
+
+}
+
+.colfooter ul li {
+    list-style: none;
+}
+
+.colfooter p {
+    font-family: 'Helvetica';
+    color: #ffffff;
+    font-size: 1.2em;
+    height: 25px;
+}
+
+
+.colfooter i {
+    font-size: 20px;
+}
+
+
+.socials {
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+    list-style: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -20px;
+
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials li a {
+    font-size: 1em;
+}
+
+
+
+.socials li a i:hover {
+    color: #010155;
+    transform: scale(1.3);
+}
+
+.socials a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.socials a i {
+    font-size: 1.5em;
+    color: #fff;
+    margin-right: 0;
+    transition: 0.5s;
+}
+
+
+.titleFooter {
+    text-align: center;
+}
+
+.main_footer_copy {
+    background: linear-gradient(to right, #0d0086, red);
+    width: 100%;
+    float: left;
+    text-align: center;
+    padding: 1.5em 0em;
+}
+
+.main_footer_copy p {
+    font-family: 'Helvetica';
+    font-size: 1em;
+    color: #e1e0e0;
+    height: 10px;
+}
+
+.main_footer_copy .m-b-footer {
+    margin-bottom: 0.5em;
+}
+
+.main_footer_copy .by {
+    font-size: 0.96em;
+}
+
+.main_footer_copy .by a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main_footer_copy .by a:hover {
+    text-decoration: underline;
+}
+
+.main_footer_copy .by i {
+    font-size: 0.96em;
+    margin-right: 3px;
+    color: #e82626;
+}
+
+/*Responsivo*/
+/*768PX BREAKPOINT*/
+@media (min-width:48em) {
+    .colfooter {
+        width: 30%;
+        margin-right: 5%;
+        margin-bottom: 0;
+    }
+
+    .colfooter:nth-of-type(3n+0) {
+        margin-right: 0;
+        border-right: 0;
     }
 }
