--- a/css/servico-slide.css
+++ b/css/servico-slide.css
@@ -9,9 +9,9 @@
       }
 
       header {
-          border-top: solid 30px rgb(12, 12, 187);
+          /* border-top: solid 30px rgb(12, 12, 187);
           border-bottom: solid 30px rgb(187, 12, 12);
-          margin-bottom: 100px;
+          margin-bottom: 100px; */
       }
 
       .navbar img {
