--- a/css/auto.css
+++ b/css/auto.css
@@ -10,7 +10,7 @@ body {
     font-family: Helvetica;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
     --color1: var(--color1)#fff;
-    --color1: var(--color1)#181818;
+    --color2: var(--color2)#181818;
 
 }
 
@@ -60,14 +60,14 @@ body {
 }
 
 .menu li a {
-
     display: inline-block;
     text-decoration: none;
-    color: #fff;
+    color: var(--color2);
     text-align: center;
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
+    font-size: 1.3em;
 }
 
 .menu li a::after {
@@ -100,7 +100,7 @@ body {
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-
+    color: rgb(50, 231, 75);
 }
 
 .close-menu {
@@ -119,14 +119,15 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 80%;
+        width: 55%;
         height: 100vh;
         position: fixed;
         top: 0;
         right: -100%;
         z-index: 100;
-        background-color: var(--color2);
+        background: var(--color2);
         transition: all 0.2s ease-in-out;
+        color: rgb(50, 231, 75);
     }
 
     .menu li {
@@ -177,6 +178,7 @@ section h2 {
     margin-bottom: 150px;
     letter-spacing: 4px;
 }
+
 .titulo {
     font-size: 50px;
 }
@@ -348,7 +350,7 @@ section h2 {
 .text {
     color: white;
     text-align: center;
-    
+
 }
 
 .mapas {
@@ -399,4 +401,190 @@ section h2 {
 
 .fone {
     width: 75px;
+}
+
+/*RODAPÉ*/
+.main_footer {
+    background: linear-gradient(to right, #0d0086, red);
+    color: #fff;
+    font-size: 0.875em;
+    margin-top: 80px;
+}
+
+.main_footer .content {
+    float: left;
+    width: 90%;
+    margin: 0 5%;
+    padding: 5em 0;
+}
+
+.container {
+    float: left;
+    width: 100%;
+}
+
+.colfooter {
+    width: 100%;
+    height: auto;
+    float: left;
+    margin-bottom: 2em;
+}
+
+.colfooter ul {
+    width: 100%;
+    float: left;
+}
+
+.colfooter ul li {
+    padding: 0.2em 0em;
+}
+
+.colfooter ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1em;
+}
+
+.colfooter ul li a i {
+    font-size: 0.5em;
+}
+
+.colfooter ul li a:hover {
+    text-decoration: underline;
+}
+
+.colfooter .titleFooter {
+    font-family: Helvetica, sans-serif;
+    font-size: 1.5em;
+    color: #ffffff;
+    padding-bottom: 0.5em;
+    margin-bottom: 0.5em;
+    border-bottom: 1px #ffffff solid;
+}
+
+.colfooter ul li a {
+    text-align: center;
+    margin-left: 14%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    height: 30px;
+    margin-right: 12%;
+    margin-top: 10px;
+}
+
+.colfooter ul li {
+    list-style: none;
+}
+
+.colfooter p {
+    font-family: 'Helvetica';
+    color: #ffffff;
+    font-size: 1.2em;
+    text-align: center;
+    height: 3em;
+}
+
+
+.colfooter i {
+    font-size: 20px;
+}
+
+
+.socials {
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+    list-style: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -20px;
+
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials li a {
+    font-size: 1em;
+}
+
+
+
+.socials li a i:hover {
+    /* color: #010155; */
+    transform: scale(1.3);
+}
+
+.socials a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.socials a i {
+    font-size: 1.5em;
+    color: #fff;
+    margin-right: 0;
+    transition: 0.5s;
+}
+
+
+.titleFooter {
+    text-align: center;
+}
+
+.main_footer_copy {
+    background: linear-gradient(to right, #0d0086, red);
+    width: 100%;
+    float: left;
+    text-align: center;
+    padding: 1.5em 0em;
+}
+
+.main_footer_copy p {
+    font-family: 'Helvetica';
+    font-size: 1em;
+    color: #e1e0e0;
+    height: 10px;
+}
+
+.main_footer_copy .m-b-footer {
+    margin-bottom: 0.5em;
+}
+
+.main_footer_copy .by {
+    font-size: 0.96em;
+}
+
+.main_footer_copy .by a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.main_footer_copy .by a:hover {
+    text-decoration: underline;
+}
+
+.main_footer_copy .by i {
+    font-size: 0.96em;
+    margin-right: 3px;
+    color: #e82626;
+}
+
+/*Responsivo*/
+/*768PX BREAKPOINT*/
+@media (min-width:48em) {
+    .colfooter {
+        width: 30%;
+        margin-right: 5%;
+        margin-bottom: 0;
+    }
+
+    .colfooter:nth-of-type(3n+0) {
+        margin-right: 0;
+        border-right: 0;
+    }
 }
