--- a/css/btn.css
+++ b/css/btn.css
@@ -8,7 +8,7 @@ body {
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
     font-family: Helvetica, sans-serif;
     --color1: var(--color1)#fff;
-    --color1: var(--color1)#181818;
+    --color2: var(--color2)#181818;
 }
 
 .navbar {
@@ -16,6 +16,7 @@ body {
     display: flex;
     height: 10rem;
    background: #fff;
+  
 }
 
 .nav-bar {
@@ -29,7 +30,7 @@ body {
     padding: 12px 20px;
     /* border-bottom: 30px solid red;
     border-top: 30px solid blue; */
-    background-color: #fff;
+    background-color: var(--color2);
 }
 
 /* .logo {
@@ -50,23 +51,27 @@ body {
 
 .menu {
     display: flex;
+    
 }
 
 .menu li {
     padding-left: 30px;
     text-align: right;
+    
 }
 
 .menu li a {
-    display: inline-block;
+    display: flex;
     text-decoration: none;
-    color: var(--color1);
-    text-align: center;
+    color: var(--color2)
+    tex
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
     text-align: right;
+   
 }
+
 
 .menu li a::after {
     content: "";
@@ -75,8 +80,9 @@ body {
     left: 0;
     width: 0;
     height: 1px;
-    background-color: var(--color1);
+    background-color: var(--color2);
     transition: 0.15s ease-in-out;
+    
 }
 
 .menu li a:hover:after {
@@ -86,16 +92,18 @@ body {
 .open-menu,
 .close-menu {
     position: absolute;
-    color: var(--color1);
+    color: var(--color2);
     cursor: pointer;
     font-size: 1.5rem;
     display: none;
+    
 }
 
 .open-menu {
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
+    
 }
 
 .close-menu {
@@ -403,7 +411,7 @@ section h2 {
 
 
 .socials li a i:hover {
-    color: #010155;
+    /* color: #010155; */
     transform: scale(1.3);
 }
 
