--- a/css/auto.css
+++ b/css/auto.css
@@ -9,8 +9,8 @@ body {
     margin: 0;
     font-family: Helvetica;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(6, 19, 131, 0.993), rgb(139, 29, 29));
-    --color1: var(--color1)#fff;
-    --color2: var(--color2)#181818;
+    --color1: #fff;
+    --color2: #181818;
 
 }
 
@@ -22,7 +22,7 @@ body {
     align-items: center;
     list-style: none;
     position: relative;
-    background-color: var(--color2);
+    background-color: var(--color1);
     padding: 12px 20px;
     border-bottom: 25px solid blue;
     border-top: 25px solid red;
@@ -40,26 +40,18 @@ body {
     border-bottom: 2px solid blue;
 }
 
-.logo img {
-    width: 450px;
-}
-
-.menu {
-    display: flex;
-
-}
-
-.menu li {
-      padding-left: 30px;
-}
-
+/*MENU HAMBURGUER*/
+.logo img {width: 450px;}
+.menu {display: flex;}
+.menu li {padding-left: 30px;}
 .menu li a {
+    display: inline-block;
+    text-decoration: none;
     color: var(--color2);
     text-align: center;
     transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
-    font-size: 1.2em;
 }
 
 .menu li a::after {
@@ -71,73 +63,49 @@ body {
     height: 1px;
     background-color: var(--color1);
     transition: 0.15s ease-in-out;
-
 }
 
-.menu li a:hover:after {
-    width: 100%;
-}
-
-.open-menu,
-.close-menu {
+.menu li a:hover:after {width: 100%;}
+.open-menu , .close-menu {
     position: absolute;
-    color: var(--color1);
+    color: var(--color2);
     cursor: pointer;
     font-size: 1.5rem;
-    display: none;
-
+    /* color: #000; */
 }
 
 .open-menu {
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-    color: rgb(50, 231, 75);
 }
 
 .close-menu {
     top: 20px;
     right: 20px;
-
 }
 
-#check {
-    display: none;
-
-}
-
-@media (max-width: 610px) {
+#check {display: none;}
+@media(max-width: 610px) {
     .menu {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 55%;
+        width: 80%;
         height: 100vh;
         position: fixed;
         top: 0;
         right: -100%;
         z-index: 100;
-        background: var(--color2);
+        background-color: var(--color1);
         transition: all 0.2s ease-in-out;
-        color: rgb(50, 231, 75);
+       
     }
 
-    .menu li {
-        margin-top: 40px;
-    }
-
-    .menu li {
-        padding: 40px;
-    }
-
-    .open-menu,
-    .close-menu {
-        display: block;
-    }
-
-    #check:checked~.menu {
-        right: 0;
-    }
+    .menu li {margin-top: 40px;}
+    .menu li {padding: 40px;}
+    .open-menu , .close-menu {display: block;}
+    #check:checked ~ .menu {right: 0;}
 }
 
 @media screen and (max-width: 1110px) {
