--- a/css/auto.css
+++ b/css/auto.css
@@ -41,9 +41,18 @@ body {
 }
 
 /*MENU HAMBURGUER*/
-.logo img {width: 450px;}
-.menu {display: flex;}
-.menu li {padding-left: 30px;}
+.logo img {
+    width: 450px;
+}
+
+.menu {
+    display: flex;
+}
+
+.menu li {
+    padding-left: 30px;
+}
+
 .menu li a {
     display: inline-block;
     text-decoration: none;
@@ -65,8 +74,12 @@ body {
     transition: 0.15s ease-in-out;
 }
 
-.menu li a:hover:after {width: 100%;}
-.open-menu , .close-menu {
+.menu li a:hover:after {
+    width: 100%;
+}
+
+.open-menu,
+.close-menu {
     position: absolute;
     color: var(--color2);
     cursor: pointer;
@@ -85,7 +98,10 @@ body {
     right: 20px;
 }
 
-#check {display: none;}
+#check {
+    display: none;
+}
+
 @media(max-width: 610px) {
     .menu {
         flex-direction: column;
@@ -99,13 +115,25 @@ body {
         z-index: 100;
         background-color: var(--color1);
         transition: all 0.2s ease-in-out;
-       
+
     }
 
-    .menu li {margin-top: 40px;}
-    .menu li {padding: 40px;}
-    .open-menu , .close-menu {display: block;}
-    #check:checked ~ .menu {right: 0;}
+    .menu li {
+        margin-top: 40px;
+    }
+
+    .menu li {
+        padding: 40px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
 }
 
 @media screen and (max-width: 1110px) {
@@ -127,6 +155,13 @@ section {
     padding: 5%;
     text-align: center;
     width: 90%;
+}
+
+.titulo {
+    font-size: 40px;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: 4px;
 }
 
 section h2 {
