--- a/css/btn.css
+++ b/css/btn.css
@@ -15,8 +15,8 @@ body {
     flex: 100%;
     display: flex;
     height: 10rem;
-   background: #fff;
-  
+    background: #fff;
+
 }
 
 .nav-bar {
@@ -51,25 +51,23 @@ body {
 
 .menu {
     display: flex;
-    
+
 }
 
 .menu li {
     padding-left: 30px;
     text-align: right;
-    
+
 }
 
 .menu li a {
     display: flex;
     text-decoration: none;
-    color: var(--color2)
-    tex
-    transition: 0.15s ease-in-out;
+    color: var(--color2) tex transition: 0.15s ease-in-out;
     position: relative;
     text-transform: uppercase;
     text-align: right;
-   
+
 }
 
 
@@ -82,7 +80,7 @@ body {
     height: 1px;
     background-color: var(--color2);
     transition: 0.15s ease-in-out;
-    
+
 }
 
 .menu li a:hover:after {
@@ -96,14 +94,14 @@ body {
     cursor: pointer;
     font-size: 1.5rem;
     display: none;
-    
+
 }
 
 .open-menu {
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
-    
+
 }
 
 .close-menu {
