--- a/css/dam-slide.css
+++ b/css/dam-slide.css
@@ -19,7 +19,7 @@
 }
 
 .navbar {
-    display: inline-flex; 
+    display: inline-flex;
     position: absolute;
     left: 0;
     top: 0;
@@ -34,19 +34,19 @@
 
 
 body {
- background: #cccccc;
+    background: #cccccc;
 }
 
 .container {
     width: 102vmin;
     position: absolute;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     top: 100%;
     left: 50%;
     overflow: hidden;
     border: 20px solid #ffffff;
     border-radius: 8px;
-    box-shadow: 10px 25px 30px rgba(30,30,200,0.3);
+    box-shadow: 10px 25px 30px rgba(30, 30, 200, 0.3);
 }
 
 .wrapper {
@@ -54,43 +54,52 @@ body {
     display: flex;
     animation: slide 15s infinite;
 }
+
 @keyframes slide {
-   
-    0%{
+
+    0% {
         transform: translateX(0);
     }
-    25%{
+
+    25% {
         transform: translateX(0);
     }
-    30%{
+
+    30% {
         transform: translateX(-100%);
     }
-    50%{
+
+    50% {
         transform: translateX(-100%);
     }
-    55%{
+
+    55% {
         transform: translateX(-200%);
     }
-    75%{
+
+    75% {
         transform: translateX(-200%);
     }
-    80%{
-        transform: translateX(-300%);
-    }
-    95%{
-        transform: translateX(-300%);
-    }
-    100%{
+
+    80% {
         transform: translateX(-300%);
     }
 
-    110%{
+    95% {
         transform: translateX(-300%);
     }
- 
-}   
+
+    100% {
+        transform: translateX(-300%);
+    }
+
+    110% {
+        transform: translateX(-300%);
+    }
+
+}
 
 img {
     width: 100%;
-   
+
 }
