--- a/css/product.css
+++ b/css/product.css
@@ -9,7 +9,6 @@
 body {
     margin: 0;
     background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(6, 19, 131, 0.993), rgb(139, 29, 29));
-    /* color: #fff; */
 
 }
 
@@ -21,7 +20,7 @@ body {
 .voltar a {
     display: block;
     text-decoration: none;
-    color:rgb(173, 236, 47)
+    color: rgb(173, 236, 47);
     text-align: left;
     font-weight: bold;
     margin-left: 10px;
@@ -57,9 +56,6 @@ header {
     width: 450px;
 }
 
-
-
-
 .container .search {
     display: flex;
     padding: 30px 0px;
@@ -89,15 +85,11 @@ header {
     align-items: center;
 }
 
-
-
 section {
     display: inline-block;
     margin-top: 100px;
-    /* border: 1px solid yellow; */
     margin-left: 5%;
     margin-right: 5%;
-    /* height: 400px; */
     padding: 5%;
     text-align: center;
     width: 90%;
@@ -121,7 +113,6 @@ section h1 {
     width: 20%;
     padding: 20px;
     margin: 1%;
-    /* border: 1px solid #fff; */
     border-radius: 10px;
     cursor: pointer;
     background-color: #fff;
