--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,11 +1,3 @@
-/* @media screen and (max-width: 660px) {
-    .menu {
-        display: none;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-} */
 /*MENU HAMBURGUE*/
 @media screen and (max-width: 670px) {
     .menu {
@@ -21,10 +13,23 @@
         background-color: var(--color2);
         transition: all 0.2s ease-in-out;
     }
-    .menu li {margin-top: 40px;}
-    .menu li {padding: 40px;}
-    .open-menu , .close-menu {display: block;}
-    #check:checked~.menu {right: 0;}
+
+    .menu li {
+        margin-top: 40px;
+    }
+
+    .menu li {
+        padding: 40px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
 }
 
 @media screen and (max-width: 1086px) {
@@ -78,11 +83,13 @@
     .slide img {
         width: 500px;
     }
+
     section .mapas img {
         display: block;
         width: 2000px;
-        
+
     }
+
     section .contato h2 {
         margin-top: 50px;
     }
@@ -111,158 +118,157 @@
         line-height: 35px;
     }
 
-@media screen and (max-width: 550px) {
+    @media screen and (max-width: 550px) {
 
-    .logo img {
-        width: 350px;
-    }
+        .logo img {
+            width: 350px;
+        }
 
-}
-
-
-
-@media screen and (max-width: 900px) {
-
-    .logo-serve img {
-        width: 300px;
-    }
-}
-
-@media screen and (max-width: 500px) {
-
-    /* .menu-burguer {
-        margin-left: 10px;
-    } */
-
-    #whats {
-        display: none;
-    }
-
-    #fone {
-        display: none;
     }
 
 
-}
 
-@media screen and (max-width: 1200px) {
+    @media screen and (max-width: 900px) {
 
-    .container .search {
-        display: grid;
-        margin-left: 300px;
-        font-size: 1.5em;
+        .logo-serve img {
+            width: 300px;
+        }
     }
 
-}
+    @media screen and (max-width: 500px) {
 
-@media screen and (max-width: 1200px) {
+        #whats {
+            display: none;
+        }
 
-    .search imput {
-        display: none;
-    }
-
-}
-
-@media screen and (max-width: 1200px) {
-
-    .product-list .product {
-        display: inline-flex;
-        flex-flow: nowrap;
-        justify-content: space-between;
-        align-items: center;
+        #fone {
+            display: none;
+        }
 
 
     }
 
-}
+    @media screen and (max-width: 1200px) {
 
-@media screen and (max-width: 1110px) {
-
-    .text-box a {
-
-        font-size: 10px;
-
-    }
-
-}
-
-
-@media screen and (max-width: 1110px) {
-    .logo a img {
-        width: 200px;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-
-    .product {
-        width: 100%;
+        .container .search {
+            display: grid;
+            margin-left: 300px;
+            font-size: 1.5em;
+        }
 
     }
 
-    section h1 {
-        font-size: 35px;
+    @media screen and (max-width: 1200px) {
+
+        .search imput {
+            display: none;
+        }
+
     }
 
-    .container .search input {
-        padding: 10px 15px;
+    @media screen and (max-width: 1200px) {
+
+        .product-list .product {
+            display: inline-flex;
+            flex-flow: nowrap;
+            justify-content: space-between;
+            align-items: center;
+
+
+        }
+
+    }
+
+    @media screen and (max-width: 1110px) {
+
+        .text-box a {
+
+            font-size: 10px;
+
+        }
+
     }
 
 
-}
-
-@media screen and (max-width: 800px) {
-    .logo img {
-        width: 350px;
-    }
-    section .titulo {
-        font-size: 16px;
+    @media screen and (max-width: 1110px) {
+        .logo a img {
+            width: 200px;
+        }
     }
 
-}
+    @media screen and (max-width: 1280px) {
 
-/*Responsivo FOOTER*/
-/*768PX BREAKPOINT*/
-@media (min-width:48em) {
-    .colfooter {
-        width: 30%;
-        margin-right: 5%;
-        margin-bottom: 0;
+        .product {
+            width: 100%;
+
+        }
+
+        section h1 {
+            font-size: 35px;
+        }
+
+        .container .search input {
+            padding: 10px 15px;
+        }
+
+
     }
 
-    .colfooter:nth-of-type(3n+0) {
-        margin-right: 0;
-        border-right: 0;
-    }
-}
+    @media screen and (max-width: 800px) {
+        .logo img {
+            width: 350px;
+        }
 
-@media screen and (max-width: 750px) {
-    .slides-list img {
-        width: 80%;
-    }
+        section .titulo {
+            font-size: 16px;
+        }
 
-    .slides-list p {
-        margin-top: 50px;
     }
 
-    .content {
-        margin-top: 50px;
+    /*Responsivo FOOTER*/
+    /*768PX BREAKPOINT*/
+    @media (min-width:48em) {
+        .colfooter {
+            width: 30%;
+            margin-right: 5%;
+            margin-bottom: 0;
+        }
+
+        .colfooter:nth-of-type(3n+0) {
+            margin-right: 0;
+            border-right: 0;
+        }
     }
 
-}
+    @media screen and (max-width: 750px) {
+        .slides-list img {
+            width: 80%;
+        }
 
-@media screen and (max-width: 600px) {
-    .container-servico {
-        margin-top: 100px;
-        height: 10%;
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-    }
-}
+        .slides-list p {
+            margin-top: 50px;
+        }
 
-@media screen and (max-width: 670px) {
-    span .titulo {
-        font-size: 20px;
+        .content {
+            margin-top: 50px;
+        }
+
     }
-}
+
+    @media screen and (max-width: 600px) {
+        .container-servico {
+            margin-top: 100px;
+            height: 10%;
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+        }
+    }
+
+    @media screen and (max-width: 670px) {
+        span .titulo {
+            font-size: 20px;
+        }
+    }
+
+ 
